# My-Templates

./: .clang-format  .clang-tidy  .gitignore  .zshrc  CMakeLists.txt  README.md  init.vim  plugins.lua
.config/: hx-config.toml  init.vim  sway-config
.config/helix/: runtime
.config/i3/: config  lock.sh  toggle_bar_ipc.py
.config/sway/: config  lock_with_padlock.sh
.config/xfce4/terminal/: terminalrc
.config/zed/: settings.json
apps/: CMakeLists.txt  main.cpp
include/ProjectName/: lib.hpp
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  tests.cpp
